--- a/estilomenu/stylemenu.css
+++ b/estilomenu/stylemenu.css
@@ -111,4 +111,13 @@ nav ul.button li{
    }
 }
 
+/*footer{
+    background-color: rgb(4, 4, 131);
+    color: white;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    
+}
 
+*/
