--- a/estilomenu/stylemenu.css
+++ b/estilomenu/stylemenu.css
@@ -157,6 +157,7 @@ nav ul.button li{
     display: flex;
     align-items: center;
     margin: 10px;
+    padding: 20px;
     text-align: center;
     
 
@@ -167,6 +168,7 @@ nav ul.button li{
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 30px;
     
 }
 
