--- a/estilocontato/estiloartigo.css
+++ b/estilocontato/estiloartigo.css
@@ -1,9 +1,11 @@
 .estiloartigo p{
-    background-color: black;
+    background-color: rgb(18, 18, 107);
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
-    padding: 5px;
+    margin: 40px;
+    padding: 30px;
 }
