--- a/estilocontato/estilocontato.css
+++ b/estilocontato/estilocontato.css
@@ -1,6 +1,8 @@
 .estilocontato h2{
-    background-color: black;
+    background-color: chocolate;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
     display: flex;
     flex-direction: column;
     align-items: center;
