--- a/estilomenu/stylemenu.css
+++ b/estilomenu/stylemenu.css
@@ -163,13 +163,22 @@ nav ul.button li{
 
 }
 
+p {
+
+    background-color: blue;
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 15px;
+    padding: 30px;
+}
+
 .conteudovideo video{
-    background-color: cadetblue;
+    background-color: rgb(143, 104, 33);
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 30px;
-    
+        
 }
 
 
