--- a/estiloprovadoenem/estiloprovadoenem.css
+++ b/estiloprovadoenem/estiloprovadoenem.css
@@ -2,12 +2,11 @@
 /* Essa é a Configuração da parte de cima titulo */
 .tituloprincipalenem h2{
 
-   background-color: teal;
+   background-color: chocolate;
    color: white;
    text-align: center;
-
-   margin: 10px;
-   padding: 10px;
+   margin: 15px;
+   padding: 8px;
 }
 
 /* Configurando a barra onde fica os anos (Links)*/
@@ -22,7 +21,7 @@
 
    justify-content: space-evenly;
 
-   margin: 2px ;
+   margin: 15px ;
 
    padding: 8px;
 
