--- a/estilomenu/stylemenu.css
+++ b/estilomenu/stylemenu.css
@@ -40,7 +40,7 @@ nav ul li a:hover{
 }
 
 nav ul.menu{
-    background-color: darkgoldenrod;
+    background-color: chocolate;
     position: absolute;
    /* altura do menu */
     top:75px;
@@ -69,7 +69,7 @@ nav ul.button{
 
 
 nav ul.button:hover li {
-    background: #333;
+    background: white;
 }
 
 
@@ -80,7 +80,7 @@ nav ul.button li{
 
     height: 5px;
 
-    background: rosybrown;
+    background: chocolate;
 
     border-radius: 3px;
 
@@ -149,37 +149,33 @@ nav ul.button li{
 
 }
 
-.conteudovideo p{
 
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    text-transform: inherit;
-    display: flex;
-    align-items: center;
-    margin: 10px;
-    padding: 20px;
-    text-align: center;
-    
 
-}
 
-p {
-
-    background-color: blue;
-    color: white;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 15px;
-    padding: 30px;
-}
 
 .conteudovideo video{
     background-color: rgb(143, 104, 33);
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 0px 20px 20px 20px;
+    
+    
         
 }
+
+/* Acessibilidade Libras */
+.access-button{
+    width: 30px;
+
+    border-radius: 50px;
+
+    max-width: 40%;
+
+    
+    
+}
+
 
 
 /*------------------------------------------------------------*/
