--- a/estilomenu/stylemenu.css
+++ b/estilomenu/stylemenu.css
@@ -146,6 +146,22 @@ nav ul.button li{
 
 
 }
+
+p {
+
+    background-color: rgba(0, 0, 255, 0.377);
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    margin: 50px;
+    padding: 30px;
+    text-align: center;
+    
+    font-size: 15px;
+    line-height: 20px;
+    
+}
+
+
 .conteudovideo{
     
     display: flex;
